welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: type mismatch;
 found   : Unit
 required: String
		if(day<6 || day>0){return "10:00"}
                ^